--- a/Exploratory Data Analysis.ipynb
+++ b/Exploratory Data Analysis.ipynb
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40654943",
+   "id": "863e9b92",
    "metadata": {},
    "source": [
     "Using heatmap we can see that age and cabin has lot of missing values.But in between these two cabin data is almost completely lost so we will drop that col and with age we can do some replacement with imputation.\n",
@@ -489,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "27e2679c",
+   "id": "c10d463e",
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3f9ad850",
+   "id": "13437c8f",
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5f7bb99f",
+   "id": "686cef1f",
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "9ea16d13",
+   "id": "b4b61320",
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +616,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "0a68cf66",
+   "id": "48793acf",
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "31f4f9ee",
+   "id": "387fa0c9",
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "3df8a9ce",
+   "id": "63e209a8",
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95795b6a",
+   "id": "499585a7",
    "metadata": {},
    "source": [
     "# Data Cleaning "
@@ -717,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e809b36b",
+   "id": "a09e1ca1",
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "4aafd170",
+   "id": "9fec309d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,7 +773,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "288e9e0d",
+   "id": "a214d511",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "e67db5aa",
+   "id": "bcbc3f3a",
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c1dce59",
+   "id": "16ce9bef",
    "metadata": {},
    "source": [
     "Null Values in Age column is resolved"
@@ -944,7 +944,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "6c7fb3bf",
+   "id": "16075666",
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +964,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "214de0e4",
+   "id": "eb8867f0",
    "metadata": {},
    "source": [
     "droping the cabin column"
@@ -973,7 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "fb417375",
+   "id": "88d30cf2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fb0c222",
+   "id": "914d7f4f",
    "metadata": {},
    "source": [
     "after removing cabin col"
@@ -991,7 +991,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "1f48edf1",
+   "id": "c29b37ce",
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +1012,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "deabd592",
+   "id": "895dc5d0",
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1159,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "446a87bf",
+   "id": "dc3c10a1",
    "metadata": {},
    "outputs": [
     {
@@ -1194,7 +1194,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "33d7d314",
+   "id": "50ea53a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1204,7 +1204,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "d4bc6a24",
+   "id": "6f048a89",
    "metadata": {},
    "outputs": [
     {
@@ -1238,7 +1238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0c94ba1",
+   "id": "47fa09ef",
    "metadata": {},
    "source": [
     "Converting Categorical Features"
@@ -1247,7 +1247,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "222223b0",
+   "id": "2aefead4",
    "metadata": {},
    "outputs": [
     {
@@ -1326,7 +1326,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "29a3e851",
+   "id": "3b642ff7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1337,7 +1337,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "9c0f350a",
+   "id": "a5c25c1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1347,7 +1347,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "c9623d02",
+   "id": "48e7d7f8",
    "metadata": {},
    "outputs": [
     {
@@ -1456,7 +1456,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "b0624ee5",
+   "id": "ac5befc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1466,7 +1466,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "05eb35f0",
+   "id": "760be819",
    "metadata": {},
    "outputs": [
     {
@@ -1591,12 +1591,315 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1ec39e61",
+   "metadata": {},
+   "source": [
+    "# Building a Logistic Regression Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e13ed5df",
+   "metadata": {},
+   "source": [
+    "# Train Test Split"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "097e1c4d",
+   "execution_count": 48,
+   "id": "30bfb77d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>male</th>\n",
+       "      <th>Q</th>\n",
+       "      <th>S</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.2500</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>71.2833</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.9250</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>53.1000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   PassengerId  Pclass   Age  SibSp  Parch     Fare  male  Q  S\n",
+       "0            1       3  22.0      1      0   7.2500     1  0  1\n",
+       "1            2       1  38.0      1      0  71.2833     0  0  0\n",
+       "2            3       3  26.0      0      0   7.9250     0  0  1\n",
+       "3            4       1  35.0      1      0  53.1000     0  0  1\n",
+       "4            5       3  35.0      0      0   8.0500     1  0  1"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.drop('Survived',axis=1).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "885ebc13",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    0\n",
+       "1    1\n",
+       "2    1\n",
+       "3    1\n",
+       "4    0\n",
+       "Name: Survived, dtype: int64"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train['Survived'].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "d9c17edf",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "a13c09ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train,X_test,y_train,y_test = train_test_split(train.drop('Survived',axis=1),\n",
+    "                                                 train['Survived'],test_size=0.30,\n",
+    "                                                 random_state=12)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9954298e",
+   "metadata": {},
+   "source": [
+    "# Training and Predicting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "f2a2f6a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "674462ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\python38-32\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression()"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "logmodel = LogisticRegression()\n",
+    "logmodel.fit(X_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "b9a23a38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = logmodel.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "423a1bd7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import confusion_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "df3ca305",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracy = confusion_matrix(y_test,predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "d73bf459",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[138,  31],\n",
+       "       [ 26,  72]], dtype=int64)"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "b75e88d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a2980a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracy = accur"
+   ]
   }
  ],
  "metadata": {
