--- a/Exploratory Data Analysis.ipynb
+++ b/Exploratory Data Analysis.ipynb
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "863e9b92",
+   "id": "a33ea418",
    "metadata": {},
    "source": [
     "Using heatmap we can see that age and cabin has lot of missing values.But in between these two cabin data is almost completely lost so we will drop that col and with age we can do some replacement with imputation.\n",
@@ -489,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c10d463e",
+   "id": "090c32f6",
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "13437c8f",
+   "id": "b2e8daa4",
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "686cef1f",
+   "id": "6c5163c0",
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "b4b61320",
+   "id": "59dd0034",
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +616,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "48793acf",
+   "id": "164c26f5",
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "387fa0c9",
+   "id": "e7495bde",
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "63e209a8",
+   "id": "0577eab1",
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "499585a7",
+   "id": "07a70351",
    "metadata": {},
    "source": [
     "# Data Cleaning "
@@ -717,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a09e1ca1",
+   "id": "d3883cbe",
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "9fec309d",
+   "id": "c448c828",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,7 +773,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "a214d511",
+   "id": "4bcd5c55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "bcbc3f3a",
+   "id": "57cd423e",
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16ce9bef",
+   "id": "d57fc972",
    "metadata": {},
    "source": [
     "Null Values in Age column is resolved"
@@ -944,7 +944,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "16075666",
+   "id": "d0d1c6ba",
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +964,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb8867f0",
+   "id": "8a3ba97f",
    "metadata": {},
    "source": [
     "droping the cabin column"
@@ -973,7 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "88d30cf2",
+   "id": "376e5fa6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "914d7f4f",
+   "id": "33ffae63",
    "metadata": {},
    "source": [
     "after removing cabin col"
@@ -991,7 +991,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "c29b37ce",
+   "id": "438b53ac",
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +1012,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "895dc5d0",
+   "id": "057c8be0",
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1159,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "dc3c10a1",
+   "id": "e0a1e189",
    "metadata": {},
    "outputs": [
     {
@@ -1194,7 +1194,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "50ea53a2",
+   "id": "3309f3b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1204,7 +1204,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "6f048a89",
+   "id": "cd63f1d8",
    "metadata": {},
    "outputs": [
     {
@@ -1238,7 +1238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47fa09ef",
+   "id": "723ab3b6",
    "metadata": {},
    "source": [
     "Converting Categorical Features"
@@ -1247,7 +1247,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "2aefead4",
+   "id": "0492b2c0",
    "metadata": {},
    "outputs": [
     {
@@ -1326,7 +1326,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "3b642ff7",
+   "id": "0636aea7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1337,7 +1337,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "a5c25c1a",
+   "id": "325fa06c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1347,7 +1347,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "48e7d7f8",
+   "id": "3e11b76b",
    "metadata": {},
    "outputs": [
     {
@@ -1456,7 +1456,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "ac5befc9",
+   "id": "ccca680a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1466,7 +1466,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "760be819",
+   "id": "5a5bf8fc",
    "metadata": {},
    "outputs": [
     {
@@ -1592,7 +1592,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ec39e61",
+   "id": "4da5c414",
    "metadata": {},
    "source": [
     "# Building a Logistic Regression Model"
@@ -1600,7 +1600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e13ed5df",
+   "id": "f82c20ff",
    "metadata": {},
    "source": [
     "# Train Test Split"
@@ -1609,7 +1609,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "30bfb77d",
+   "id": "a6c15038",
    "metadata": {},
    "outputs": [
     {
@@ -1730,7 +1730,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "885ebc13",
+   "id": "c28ef461",
    "metadata": {},
    "outputs": [
     {
@@ -1756,7 +1756,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "d9c17edf",
+   "id": "90ab6c16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1766,7 +1766,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "a13c09ce",
+   "id": "708c9c8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1777,7 +1777,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9954298e",
+   "id": "3cb5d942",
    "metadata": {},
    "source": [
     "# Training and Predicting"
@@ -1786,7 +1786,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "f2a2f6a3",
+   "id": "f384ca7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1796,7 +1796,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "674462ab",
+   "id": "eefbd4d3",
    "metadata": {},
    "outputs": [
     {
@@ -1832,7 +1832,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "b9a23a38",
+   "id": "40f39cfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1842,7 +1842,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "423a1bd7",
+   "id": "a3079ec5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1852,7 +1852,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "df3ca305",
+   "id": "e82da7b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1862,7 +1862,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "d73bf459",
+   "id": "ac667daa",
    "metadata": {},
    "outputs": [
     {
@@ -1884,7 +1884,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "b75e88d4",
+   "id": "6de6565b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1893,13 +1893,87 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 64,
+   "id": "b38eba53",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7865168539325843"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy = accuracy_score(y_test,predictions)\n",
+    "accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "ebfc7a60",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(267,)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "4c67f067",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 1, 1, 1, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 1, 0, 0,\n",
+       "       1, 1, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0, 0, 0, 0,\n",
+       "       0, 1, 1, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 0, 0, 1, 0, 1,\n",
+       "       0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1, 0, 1, 1, 0,\n",
+       "       0, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 0,\n",
+       "       1, 0, 1, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 0, 1, 1, 0,\n",
+       "       0, 0, 1, 0, 0, 0, 0, 1, 0, 1, 1, 0, 1, 1, 1, 0, 1, 1, 0, 0, 1, 0,\n",
+       "       1, 1, 1, 0, 0, 1, 0, 1, 0, 0, 1, 1, 1, 0, 0, 0, 1, 0, 1, 0, 0, 1,\n",
+       "       0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0,\n",
+       "       0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0,\n",
+       "       1, 1, 1, 0, 1, 1, 1, 0, 0, 1, 0, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0,\n",
+       "       0, 0, 0], dtype=int64)"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "9a2980a5",
+   "id": "f152804a",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "accuracy = accur"
-   ]
+   "source": []
   }
  ],
  "metadata": {
